[gd_scene load_steps=83 format=4 uid="uid://p1onvqcjv8ce"]

[ext_resource type="Script" path="res://main.gd" id="1_popjc"]
[ext_resource type="Script" path="res://kanji_draw_panel.gd" id="2_8umj3"]
[ext_resource type="AudioStream" uid="uid://dsq53dnwje0t" path="res://music/Action 1.mp3" id="2_gbmdn"]
[ext_resource type="FontFile" uid="uid://47731eqvwht3" path="res://fonts/KleeOne-Regular.ttf" id="2_o8vpi"]
[ext_resource type="Texture2D" uid="uid://ddxjf6to5ay4q" path="res://graphics/FreeCuteTilesetv1/FreeCuteTileset/BG1.png" id="3_s2vua"]
[ext_resource type="Texture2D" uid="uid://cp3wrukd1n33i" path="res://animated-pixel-adventurer/Adventurer-1.5/adventurer-v1.5-Sheet.png" id="3_s8kje"]
[ext_resource type="Texture2D" uid="uid://bfv7i6nwi3b2u" path="res://graphics/FreeCuteTilesetv1/FreeCuteTileset/BG2.png" id="4_83gtl"]
[ext_resource type="Script" path="res://vertical_text_label.gd" id="5_1gfci"]
[ext_resource type="Texture2D" uid="uid://jo1b80rhwlc6" path="res://graphics/FreeCuteTilesetv1/FreeCuteTileset/BG3.png" id="5_qqsle"]
[ext_resource type="Texture2D" uid="uid://dluj3prg0qxix" path="res://animated-pixel-adventurer/Adventurer-1.5/Individual Sprites/adventurer-attack2-00.png" id="5_u0355"]
[ext_resource type="Texture2D" uid="uid://bw08o7bpatien" path="res://graphics/FreeCuteTilesetv1/FreeCuteTileset/Decors.png" id="6_16u0o"]
[ext_resource type="Texture2D" uid="uid://cprkj6i2p55hm" path="res://animated-pixel-adventurer/Adventurer-1.5/Individual Sprites/adventurer-attack2-01.png" id="6_y1h0t"]
[ext_resource type="Texture2D" uid="uid://cy6twaolvq572" path="res://animated-pixel-adventurer/Adventurer-1.5/Individual Sprites/adventurer-attack2-02.png" id="7_hobb5"]
[ext_resource type="Texture2D" uid="uid://3pe5tfqfu1s0" path="res://animated-pixel-adventurer/Adventurer-1.5/Individual Sprites/adventurer-attack2-03.png" id="8_bgnor"]
[ext_resource type="Texture2D" uid="uid://b0rky0svkn6rr" path="res://animated-pixel-adventurer/Adventurer-1.5/Individual Sprites/adventurer-attack2-04.png" id="9_q3fbc"]
[ext_resource type="Texture2D" uid="uid://cc3b6daas0y4j" path="res://animated-pixel-adventurer/Adventurer-1.5/Individual Sprites/adventurer-attack2-05.png" id="10_tk4cy"]
[ext_resource type="Texture2D" uid="uid://w0cf8qurerav" path="res://animated-pixel-adventurer/Adventurer-1.5/Individual Sprites/adventurer-attack3-00.png" id="11_k0qcm"]
[ext_resource type="Texture2D" uid="uid://brv2qvmm2o40c" path="res://animated-pixel-adventurer/Adventurer-1.5/Individual Sprites/adventurer-attack3-01.png" id="12_lg7tp"]
[ext_resource type="Texture2D" uid="uid://mmkdjsqet1it" path="res://animated-pixel-adventurer/Adventurer-1.5/Individual Sprites/adventurer-attack3-02.png" id="13_q4bcf"]
[ext_resource type="Texture2D" uid="uid://bsf8t4ix3hk88" path="res://animated-pixel-adventurer/Adventurer-1.5/Individual Sprites/adventurer-attack3-03.png" id="14_ene4x"]
[ext_resource type="Texture2D" uid="uid://6fru1mwh7ivq" path="res://animated-pixel-adventurer/Adventurer-1.5/Individual Sprites/adventurer-attack3-04.png" id="15_5u2cx"]
[ext_resource type="Texture2D" uid="uid://by8msk11kj0fn" path="res://animated-pixel-adventurer/Adventurer-1.5/Individual Sprites/adventurer-attack3-05.png" id="16_sw8be"]
[ext_resource type="Texture2D" uid="uid://cvunuhj2oi0j2" path="res://animated-pixel-adventurer/Adventurer-1.5/Individual Sprites/adventurer-attack1-00.png" id="17_0eaat"]
[ext_resource type="Texture2D" uid="uid://cjbadgg8pmdnb" path="res://animated-pixel-adventurer/Adventurer-1.5/Individual Sprites/adventurer-attack1-01.png" id="18_dkpoy"]
[ext_resource type="Texture2D" uid="uid://bd5bxcc2m384x" path="res://animated-pixel-adventurer/Adventurer-1.5/Individual Sprites/adventurer-attack1-02.png" id="19_6dso4"]
[ext_resource type="Texture2D" uid="uid://c7oodoojgm1os" path="res://animated-pixel-adventurer/Adventurer-1.5/Individual Sprites/adventurer-attack1-03.png" id="20_m6yj5"]
[ext_resource type="Texture2D" uid="uid://codxp6yunlu0o" path="res://animated-pixel-adventurer/Adventurer-1.5/Individual Sprites/adventurer-attack1-04.png" id="21_u1krs"]
[ext_resource type="Texture2D" uid="uid://csmfh06rgwab" path="res://animated-pixel-adventurer/Adventurer-1.5/Individual Sprites/adventurer-die-00.png" id="22_1qaw2"]
[ext_resource type="Texture2D" uid="uid://dcp16fbocwlq0" path="res://animated-pixel-adventurer/Adventurer-1.5/Individual Sprites/adventurer-cast-00.png" id="22_ho2pm"]
[ext_resource type="Texture2D" uid="uid://crepksk5tabr7" path="res://animated-pixel-adventurer/Adventurer-1.5/Individual Sprites/adventurer-cast-01.png" id="23_p6s26"]
[ext_resource type="Texture2D" uid="uid://dqwjuamtveia8" path="res://animated-pixel-adventurer/Adventurer-1.5/Individual Sprites/adventurer-die-01.png" id="23_re7u7"]
[ext_resource type="Texture2D" uid="uid://byq14254njduy" path="res://animated-pixel-adventurer/Adventurer-1.5/Individual Sprites/adventurer-cast-02.png" id="24_04pg5"]
[ext_resource type="Texture2D" uid="uid://c8ypw85jw48v0" path="res://animated-pixel-adventurer/Adventurer-1.5/Individual Sprites/adventurer-die-02.png" id="24_hc74g"]
[ext_resource type="Texture2D" uid="uid://h1rkor3afxsy" path="res://animated-pixel-adventurer/Adventurer-1.5/Individual Sprites/adventurer-cast-03.png" id="25_h4s2g"]
[ext_resource type="Texture2D" uid="uid://roh40fswduwd" path="res://animated-pixel-adventurer/Adventurer-1.5/Individual Sprites/adventurer-die-03.png" id="25_ukkus"]
[ext_resource type="Texture2D" uid="uid://dlk6vqfor7q2y" path="res://animated-pixel-adventurer/Adventurer-1.5/Individual Sprites/adventurer-die-04.png" id="26_ii044"]
[ext_resource type="Texture2D" uid="uid://b8k57derdjkw1" path="res://animated-pixel-adventurer/Adventurer-1.5/Individual Sprites/adventurer-cast-loop-00.png" id="26_ky7dk"]
[ext_resource type="Texture2D" uid="uid://c5tywfpte6jbo" path="res://animated-pixel-adventurer/Adventurer-1.5/Individual Sprites/adventurer-die-05.png" id="27_3dntu"]
[ext_resource type="Texture2D" uid="uid://cknvq7xbvb0ux" path="res://animated-pixel-adventurer/Adventurer-1.5/Individual Sprites/adventurer-cast-loop-01.png" id="27_otvuq"]
[ext_resource type="Texture2D" uid="uid://cms8ilp3e3sv2" path="res://animated-pixel-adventurer/Adventurer-1.5/Individual Sprites/adventurer-cast-loop-02.png" id="28_bf7b0"]
[ext_resource type="Texture2D" uid="uid://gd1eolyv2ng5" path="res://animated-pixel-adventurer/Adventurer-1.5/Individual Sprites/adventurer-die-06.png" id="28_yam7b"]
[ext_resource type="Texture2D" uid="uid://dhgnx0fp74ntb" path="res://animated-pixel-adventurer/Adventurer-1.5/Individual Sprites/adventurer-hurt-00.png" id="29_hwo5q"]
[ext_resource type="Texture2D" uid="uid://b8xahegote6ut" path="res://animated-pixel-adventurer/Adventurer-1.5/Individual Sprites/adventurer-cast-loop-03.png" id="29_mi160"]
[ext_resource type="Texture2D" uid="uid://dqvf4j8xa7ia" path="res://animated-pixel-adventurer/Adventurer-1.5/Individual Sprites/adventurer-hurt-01.png" id="30_7s3i0"]
[ext_resource type="Texture2D" uid="uid://bu4c4uqud8pma" path="res://animated-pixel-adventurer/Adventurer-1.5/Individual Sprites/adventurer-hurt-02.png" id="31_i03ar"]
[ext_resource type="Texture2D" uid="uid://bg1m0taagak10" path="res://animated-pixel-adventurer/Adventurer-1.5/Individual Sprites/adventurer-idle-2-00.png" id="33_ha0g2"]
[ext_resource type="Texture2D" uid="uid://vpme51fu83pf" path="res://animated-pixel-adventurer/Adventurer-1.5/Individual Sprites/adventurer-idle-2-01.png" id="34_e3262"]
[ext_resource type="Texture2D" uid="uid://cobhyeldt2kl4" path="res://animated-pixel-adventurer/Adventurer-1.5/Individual Sprites/adventurer-idle-2-02.png" id="35_daihr"]
[ext_resource type="Texture2D" uid="uid://brjmghhwk8wh4" path="res://animated-pixel-adventurer/Adventurer-1.5/Individual Sprites/adventurer-idle-2-03.png" id="36_2spok"]
[ext_resource type="Texture2D" uid="uid://bnxj76pgxcnxq" path="res://animated-pixel-adventurer/Adventurer-1.5/Individual Sprites/adventurer-items-00.png" id="37_ykgc8"]
[ext_resource type="Texture2D" uid="uid://bg8164r5t82dn" path="res://animated-pixel-adventurer/Adventurer-1.5/Individual Sprites/adventurer-items-01.png" id="38_tfjv0"]
[ext_resource type="Texture2D" uid="uid://5dwjm7rk0iga" path="res://animated-pixel-adventurer/Adventurer-1.5/Individual Sprites/adventurer-items-02.png" id="39_hd1y1"]
[ext_resource type="Texture2D" uid="uid://cara2nfugq1os" path="res://animated-pixel-adventurer/Adventurer-1.5/Individual Sprites/adventurer-jump-00.png" id="40_e1j6y"]
[ext_resource type="Texture2D" uid="uid://bbdjjaxd25nad" path="res://animated-pixel-adventurer/Adventurer-1.5/Individual Sprites/adventurer-jump-01.png" id="41_3h0xr"]
[ext_resource type="Texture2D" uid="uid://bxjivvjgtj4ds" path="res://animated-pixel-adventurer/Adventurer-1.5/Individual Sprites/adventurer-jump-02.png" id="42_gegtr"]
[ext_resource type="Texture2D" uid="uid://8wwcs67ey8y4" path="res://animated-pixel-adventurer/Adventurer-1.5/Individual Sprites/adventurer-jump-03.png" id="43_f1gs3"]
[ext_resource type="Texture2D" uid="uid://d27gg1y54wxgt" path="res://animated-pixel-adventurer/Adventurer-1.5/Individual Sprites/adventurer-run-00.png" id="44_7enwg"]
[ext_resource type="Texture2D" uid="uid://ddvhrq0q8gh1s" path="res://animated-pixel-adventurer/Adventurer-1.5/Individual Sprites/adventurer-run-01.png" id="45_autfu"]
[ext_resource type="Texture2D" uid="uid://bwi45g564f3ca" path="res://animated-pixel-adventurer/Adventurer-1.5/Individual Sprites/adventurer-run-02.png" id="46_nm5rq"]
[ext_resource type="Texture2D" uid="uid://cavqnhcxjjfae" path="res://animated-pixel-adventurer/Adventurer-1.5/Individual Sprites/adventurer-run-03.png" id="47_tjlge"]
[ext_resource type="Texture2D" uid="uid://xmgcya1m3tg1" path="res://animated-pixel-adventurer/Adventurer-1.5/Individual Sprites/adventurer-run-04.png" id="48_g2xv8"]
[ext_resource type="Texture2D" uid="uid://cfsxthnd2fcrc" path="res://animated-pixel-adventurer/Adventurer-1.5/Individual Sprites/adventurer-run-05.png" id="49_s7hci"]
[ext_resource type="Texture2D" uid="uid://d3u3ntbgf6b2c" path="res://animated-pixel-adventurer/Adventurer-1.5/Individual Sprites/adventurer-swrd-shte-00.png" id="50_iuwln"]
[ext_resource type="Texture2D" uid="uid://4424xvsxt6gs" path="res://animated-pixel-adventurer/Adventurer-1.5/Individual Sprites/adventurer-swrd-shte-01.png" id="51_4ih8b"]
[ext_resource type="Texture2D" uid="uid://bxwhbcqt521c8" path="res://animated-pixel-adventurer/Adventurer-1.5/Individual Sprites/adventurer-swrd-shte-02.png" id="52_7xau6"]
[ext_resource type="Texture2D" uid="uid://6f1b1jmly2dy" path="res://animated-pixel-adventurer/Adventurer-1.5/Individual Sprites/adventurer-swrd-shte-03.png" id="53_05m8c"]
[ext_resource type="Texture2D" uid="uid://cuwwy2yksckda" path="res://animated-pixel-adventurer/Adventurer-1.5/Individual Sprites/adventurer-swrd-drw-00.png" id="54_nd6ql"]
[ext_resource type="Texture2D" uid="uid://olq8xxamcn2b" path="res://animated-pixel-adventurer/Adventurer-1.5/Individual Sprites/adventurer-swrd-drw-01.png" id="55_g7km4"]
[ext_resource type="Texture2D" uid="uid://cnrvkhhr4owqy" path="res://animated-pixel-adventurer/Adventurer-1.5/Individual Sprites/adventurer-swrd-drw-02.png" id="56_46vu6"]
[ext_resource type="Texture2D" uid="uid://b1ggpio8d7ar" path="res://animated-pixel-adventurer/Adventurer-1.5/Individual Sprites/adventurer-swrd-drw-03.png" id="57_6i6ji"]
[ext_resource type="Texture2D" uid="uid://dlkni6tdcdruh" path="res://graphics/FreeCuteTilesetv1/FreeCuteTileset/Tileset.png" id="71_43fyq"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_s5yhu"]
texture = ExtResource("71_43fyq")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0

[sub_resource type="TileSet" id="TileSet_f6huk"]
sources/0 = SubResource("TileSetAtlasSource_s5yhu")

[sub_resource type="CanvasTexture" id="CanvasTexture_qm0hu"]

[sub_resource type="LabelSettings" id="LabelSettings_8byi6"]
line_spacing = -10.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_p27sb"]

[sub_resource type="LabelSettings" id="LabelSettings_423xv"]
font_color = Color(0.356863, 0.356863, 0.356863, 0.243137)

[sub_resource type="AtlasTexture" id="AtlasTexture_50xpo"]
atlas = ExtResource("3_s8kje")
region = Rect2(0, 0, 50, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_rhoyj"]
atlas = ExtResource("3_s8kje")
region = Rect2(50, 0, 50, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_c1e26"]
atlas = ExtResource("3_s8kje")
region = Rect2(100, 0, 50, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_gqo6o"]
atlas = ExtResource("3_s8kje")
region = Rect2(150, 0, 50, 42)

[sub_resource type="SpriteFrames" id="SpriteFrames_hdx0j"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_u0355")
}, {
"duration": 1.0,
"texture": ExtResource("6_y1h0t")
}, {
"duration": 1.0,
"texture": ExtResource("7_hobb5")
}, {
"duration": 1.0,
"texture": ExtResource("8_bgnor")
}, {
"duration": 1.0,
"texture": ExtResource("9_q3fbc")
}, {
"duration": 1.0,
"texture": ExtResource("10_tk4cy")
}],
"loop": false,
"name": &"attack_down",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_k0qcm")
}, {
"duration": 1.0,
"texture": ExtResource("12_lg7tp")
}, {
"duration": 1.0,
"texture": ExtResource("13_q4bcf")
}, {
"duration": 1.0,
"texture": ExtResource("14_ene4x")
}, {
"duration": 1.0,
"texture": ExtResource("15_5u2cx")
}, {
"duration": 1.0,
"texture": ExtResource("16_sw8be")
}],
"loop": false,
"name": &"attack_spin",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("17_0eaat")
}, {
"duration": 1.0,
"texture": ExtResource("18_dkpoy")
}, {
"duration": 1.0,
"texture": ExtResource("19_6dso4")
}, {
"duration": 1.0,
"texture": ExtResource("20_m6yj5")
}, {
"duration": 1.0,
"texture": ExtResource("21_u1krs")
}],
"loop": false,
"name": &"attack_up",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("22_ho2pm")
}, {
"duration": 1.0,
"texture": ExtResource("23_p6s26")
}, {
"duration": 1.0,
"texture": ExtResource("24_04pg5")
}, {
"duration": 1.0,
"texture": ExtResource("25_h4s2g")
}],
"loop": false,
"name": &"cast",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("26_ky7dk")
}, {
"duration": 1.0,
"texture": ExtResource("27_otvuq")
}, {
"duration": 1.0,
"texture": ExtResource("28_bf7b0")
}, {
"duration": 1.0,
"texture": ExtResource("29_mi160")
}],
"loop": true,
"name": &"cast_loop",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("22_1qaw2")
}, {
"duration": 1.0,
"texture": ExtResource("23_re7u7")
}, {
"duration": 1.0,
"texture": ExtResource("24_hc74g")
}, {
"duration": 1.0,
"texture": ExtResource("25_ukkus")
}, {
"duration": 1.0,
"texture": ExtResource("26_ii044")
}, {
"duration": 1.0,
"texture": ExtResource("27_3dntu")
}, {
"duration": 1.0,
"texture": ExtResource("28_yam7b")
}],
"loop": false,
"name": &"die",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("29_hwo5q")
}, {
"duration": 1.0,
"texture": ExtResource("30_7s3i0")
}, {
"duration": 1.0,
"texture": ExtResource("31_i03ar")
}],
"loop": false,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_50xpo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rhoyj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c1e26")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gqo6o")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("33_ha0g2")
}, {
"duration": 1.0,
"texture": ExtResource("34_e3262")
}, {
"duration": 1.0,
"texture": ExtResource("35_daihr")
}, {
"duration": 1.0,
"texture": ExtResource("36_2spok")
}],
"loop": true,
"name": &"idle_sword",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("37_ykgc8")
}, {
"duration": 1.0,
"texture": ExtResource("38_tfjv0")
}, {
"duration": 1.0,
"texture": ExtResource("39_hd1y1")
}],
"loop": false,
"name": &"item",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("40_e1j6y")
}, {
"duration": 1.0,
"texture": ExtResource("41_3h0xr")
}, {
"duration": 1.0,
"texture": ExtResource("42_gegtr")
}, {
"duration": 1.0,
"texture": ExtResource("43_f1gs3")
}],
"loop": false,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_k0qcm")
}, {
"duration": 1.0,
"texture": ExtResource("12_lg7tp")
}],
"loop": true,
"name": &"reverse",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("44_7enwg")
}, {
"duration": 1.0,
"texture": ExtResource("45_autfu")
}, {
"duration": 1.0,
"texture": ExtResource("46_nm5rq")
}, {
"duration": 1.0,
"texture": ExtResource("47_tjlge")
}, {
"duration": 1.0,
"texture": ExtResource("48_g2xv8")
}, {
"duration": 1.0,
"texture": ExtResource("49_s7hci")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("50_iuwln")
}, {
"duration": 1.0,
"texture": ExtResource("51_4ih8b")
}, {
"duration": 1.0,
"texture": ExtResource("52_7xau6")
}, {
"duration": 1.0,
"texture": ExtResource("53_05m8c")
}],
"loop": false,
"name": &"sword_away",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("54_nd6ql")
}, {
"duration": 1.0,
"texture": ExtResource("55_g7km4")
}, {
"duration": 1.0,
"texture": ExtResource("56_46vu6")
}, {
"duration": 1.0,
"texture": ExtResource("57_6i6ji")
}],
"loop": false,
"name": &"sword_draw",
"speed": 10.0
}]

[node name="Main" type="Node2D"]
script = ExtResource("1_popjc")

[node name="AudioStreamPlayerBgMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_gbmdn")
volume_db = -0.675
autoplay = true
parameters/looping = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
volume_db = 3.377

[node name="Bg1" type="Sprite2D" parent="."]
position = Vector2(84, 36)
scale = Vector2(0.53125, 0.53125)
texture = ExtResource("3_s2vua")

[node name="Bg2" type="Sprite2D" parent="."]
position = Vector2(92, 26)
scale = Vector2(0.802083, 0.802083)
texture = ExtResource("4_83gtl")

[node name="Bg3" type="Sprite2D" parent="."]
position = Vector2(90, 14)
scale = Vector2(0.854167, 0.854167)
texture = ExtResource("5_qqsle")

[node name="Decors" type="Sprite2D" parent="."]
position = Vector2(82.3271, 20.8081)
scale = Vector2(0.410714, 0.410714)
texture = ExtResource("6_16u0o")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
position = Vector2(89.1725, 59.8073)
tile_map_data = PackedByteArray("AAD+////AAABAAAAAAD/////AAABAAAAAAAAAP//AAABAAAAAAABAP//AAABAAAAAAD9////AAABAAAAAAD8////AAABAAAAAAD7////AAABAAAAAAD6////AAABAAAAAAAGAP//AAABAAAAAAAHAP//AAABAAAAAAAIAP//AAABAAAAAAAJAP//AAABAAAAAAD5////AAABAAAAAAD4////AAABAAAAAAD3////AAABAAAAAAD2////AAABAAAAAAACAP//AAABAAAAAAADAP//AAABAAAAAAAEAP//AAABAAAAAAAFAP//AAABAAAAAAA=")
tile_set = SubResource("TileSet_f6huk")

[node name="Polygon2D" type="Polygon2D" parent="."]
position = Vector2(-131.871, 25.0127)
scale = Vector2(6.60848, 1)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(9.169, 23, 60.755, 23, 60.8387, 78.7043, 9.20376, 78.7043)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureRect" type="TextureRect" parent="Control"]
modulate = Color(0, 0, 0, 1)
z_index = -5
z_as_relative = false
layout_mode = 0
offset_left = -328.0
offset_top = -112.0
offset_right = 760.0
offset_bottom = 848.0
texture = SubResource("CanvasTexture_qm0hu")
metadata/_edit_lock_ = true

[node name="TextureRect2" type="TextureRect" parent="Control"]
visible = false
z_index = -5
z_as_relative = false
layout_mode = 0
offset_right = 152.0
offset_bottom = 240.0
texture = SubResource("CanvasTexture_qm0hu")
metadata/_edit_lock_ = true

[node name="KanjiDrawPanel" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.869865
anchor_top = 4.03905
anchor_right = 0.869865
anchor_bottom = 4.03905
offset_right = 88.0
offset_bottom = 78.0
grow_horizontal = 2
grow_vertical = 2
mouse_force_pass_scroll_events = false
script = ExtResource("2_8umj3")
metadata/_edit_use_anchors_ = true

[node name="SentenceLabel" type="RichTextLabel" parent="Control"]
visible = false
layout_mode = 0
offset_top = 43.0
offset_right = 152.0
offset_bottom = 64.0
bbcode_enabled = true
text = "[center]世界の[color=red]繁栄[/color]を目指す[/center]"

[node name="ResultLabel" type="RichTextLabel" parent="Control"]
layout_mode = 0
offset_left = 170.0
offset_top = 80.0
offset_right = 322.0
offset_bottom = 96.0
bbcode_enabled = true
text = "[center]Correct![/center]"

[node name="KanjiLabel" type="RichTextLabel" parent="Control"]
visible = false
layout_mode = 0
offset_top = 64.0
offset_right = 152.0
offset_bottom = 112.0
theme_override_fonts/normal_font = ExtResource("2_o8vpi")
theme_override_font_sizes/normal_font_size = 22
bbcode_enabled = true
text = "[center]AAA[/center]"

[node name="ClearButton" type="Button" parent="Control"]
visible = false
layout_mode = 0
offset_left = 96.0
offset_top = 224.0
offset_right = 150.0
offset_bottom = 238.0
rotation = 0.00226829
text = "Clear"

[node name="TryAgainButtonX" type="Control" parent="Control"]
visible = false
anchors_preset = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 148.0
offset_bottom = 238.0

[node name="VerticalTextLabel" type="Label" parent="Control"]
layout_mode = 0
offset_left = 3.66858
offset_top = 49.639
offset_right = 151.669
offset_bottom = 157.639
text = "世界の繁栄を目指す"
text_direction = 2
language = "ja_JP"
script = ExtResource("5_1gfci")

[node name="Label" type="Label" parent="Control"]
layout_mode = 0
offset_left = 176.0
offset_top = 6.0
offset_right = 204.0
offset_bottom = 219.0
theme_override_constants/line_spacing = 0
theme_override_constants/outline_size = 33
text = "ゆ
び"
label_settings = SubResource("LabelSettings_8byi6")
vertical_alignment = 1
autowrap_mode = 1

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 0
offset_left = 206.0
offset_top = 18.0
offset_right = 246.0
offset_bottom = 58.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_p27sb")

[node name="KomojiButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 6.0
offset_top = 212.0
offset_right = 30.0
offset_bottom = 226.0
toggle_mode = true
text = "小字"

[node name="KomojiLabel" type="Label" parent="Control"]
visible = false
layout_mode = 0
offset_left = 34.0
offset_top = 156.0
offset_right = 122.0
offset_bottom = 180.0
text = "小文字"
label_settings = SubResource("LabelSettings_423xv")
horizontal_alignment = 1

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(74, 26)
sprite_frames = SubResource("SpriteFrames_hdx0j")
animation = &"hurt"

[connection signal="correct_stroke" from="Control/KanjiDrawPanel" to="." method="_on_kanji_draw_panel_correct_stroke"]
[connection signal="kanji_correct" from="Control/KanjiDrawPanel" to="." method="_on_kanji_draw_panel_kanji_correct"]
[connection signal="kanji_incorrect" from="Control/KanjiDrawPanel" to="." method="_on_kanji_draw_panel_kanji_incorrect"]
[connection signal="button_down" from="Control/ClearButton" to="Control/KanjiDrawPanel" method="_on_clear_button_button_down"]
[connection signal="toggled" from="Control/KomojiButton" to="." method="_on_komoji_button_toggled"]
